create_show_error_message

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,5 +6,6 @@
 @import "top/exhibition";
 @import "footer";
 @import "modules/products";
+@import "modules/addresses";
 @import "font-awesome-sprockets";
 @import "font-awesome";
