--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -1,49 +1,3 @@
 = render "layouts/header"
-.right__container
-  = form_for @address do |f|
-    %h3 発送元・お届け先住所変更
-    .field
-      = f.label :name, "お名前"
-      %span.form-require 必須
-      %br/
-      %input(type="last_name" name="last_name" vale="" placeholder="例）山田" class="input-form")
-      %input(type="first_name" name="first_name" vale="" placeholder="例）太郎" class="input-form")
-    .field
-      = f.label :name, "お名前カナ"
-      %span.form-require 必須
-      %br/
-      %input(type="last_name_jp" name="last_name_jp" vale="" placeholder="例）ヤマダ" class="input-form")
-      %input(type="first_name_jp" name="first_name_jp" vale="" placeholder="例）タロウ" class="input-form")
-    .field
-      = f.label :postal_code, "郵便番号"
-      %span.form-require 必須
-      %br/
-      = f.text_field :postal_code, placeholder: "例) 123-4567", class: "input-form"
-    .field
-      = f.label :prefectures, "都道府県"
-      %span.form-require 必須
-      %br/
-      = f.text_field :prefectures, placeholder: "北海道", class: "input-form"
-    .field
-      = f.label :city, "市区町村"
-      %span.form-require 必須
-      %br/
-      = f.text_field :city, placeholder: "横浜市緑区", class: "input-form"
-    .field
-      = f.label :house_number, "番地"
-      %span.form-require 必須
-      %br/
-      = f.text_field :house_number, placeholder: "青山1-1-1", class: "input-form"
-    .field
-      = f.label :building, "建物名"
-      %span.form-require 任意
-      %br/
-      = f.text_field :building, placeholder: "柳ビル103", class: "input-form"
-    .field
-      = f.label :phone_number, "電話番号"
-      %span.form-require 任意
-      %br/
-      = f.text_field :phone_number, placeholder: "09012345678", class: "input-form"
-    .field
-      = f.submit "変更する"
+= render "form"
 = render "layouts/footer"
