--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "header";
 @import "top/main";
 @import "top/banner";
+@import "credits";
 @import "top/exhibition";
 @import "footer";
 @import "modules/products";
