--- a/app/views/credits/index.html.haml
+++ b/app/views/credits/index.html.haml
@@ -6,7 +6,7 @@
       .chapter-inner__creditcard-list
         クレジットカード一覧
       .chapter-inner__add-creditcard
-      //  = link_to "クレジットカードを追加する" class: "credit_information__btn"
+        = link_to "クレジットカードを追加する", new_credit_path, class: "credit_information__btn"
       .chapter-inner__pay-method
       //  = link_to "支払い方法について ＞" class: "pay-method"
       
