--- a/app/views/addresses/_form.html.haml
+++ b/app/views/addresses/_form.html.haml
@@ -1,23 +1,24 @@
 .address-container
+  - shaped_postal_code = @address.new_record? ? "" : @address.postal_code.insert(3, "-")
   = form_for @address do |f|
     %h3 発送元・お届け先住所変更
     .field
       = f.label :name, "お名前"
       %span.form-require 必須
       %br/
-      %input(type="last_name" name="last_name" vale="" placeholder="例）山田" class="input-form")
-      %input(type="first_name" name="first_name" vale="" placeholder="例）太郎" class="input-form")
+      %input(type="last_name" name="last_name" value="" placeholder="例）山田" class="input-form")
+      %input(type="first_name" name="first_name" value="" placeholder="例）太郎" class="input-form")
     .field
       = f.label :name, "お名前カナ"
       %span.form-require 必須
       %br/
-      %input(type="last_name_jp" name="last_name_jp" vale="" placeholder="例）ヤマダ" class="input-form")
-      %input(type="first_name_jp" name="first_name_jp" vale="" placeholder="例）タロウ" class="input-form")
+      %input(type="last_name_jp" name="last_name_jp" value="" placeholder="例）ヤマダ" class="input-form")
+      %input(type="first_name_jp" name="first_name_jp" value="" placeholder="例）タロウ" class="input-form")
     .field
       = f.label :postal_code, "郵便番号"
       %span.form-require 必須
       %br/
-      = f.text_field :postal_code, placeholder: "例) 1234567", class: "input-form"
+      = f.text_field :postal_code, placeholder: "例) 123-4567", value: "#{shaped_postal_code}", class: "input-form"
     = render partial: 'addresses/shared/error_messages', locals: {address: @address, column: "postal_code"}
     .field
       = f.label :prefectures, "都道府県"
@@ -46,6 +47,7 @@
       = f.label :phone_number, "電話番号"
       %span.form-require 任意
       %br/
-      = f.text_field :phone_number, placeholder: "09012345678", class: "input-form"
+      = f.text_field :phone_number, placeholder: "090-1234-5678", class: "input-form"
+    = render partial: 'addresses/shared/error_messages', locals: {address: @address, column: "phone_number"}
     .field
       = f.submit "変更する"
