--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,6 @@
     %title FreemarketSample63c
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all'
-    -# = javascript_pack_tag 'application'
+    = javascript_include_tag 'application'
   %body
     = yield
