--- a/app/views/addresses/_form.html.haml
+++ b/app/views/addresses/_form.html.haml
@@ -1,5 +1,10 @@
 .address-container
-  - shaped_postal_code = @address.new_record? ? "" : @address.postal_code.insert(3, "-")
+  -if @address.new_record?
+    -shaped_postal_code = ""
+  -elsif @address.postal_code == ""
+    -shaped_postal_code = ""
+  - else
+    -shaped_postal_code = @address.postal_code.insert(3, "-")
   = form_for @address do |f|
     %h3 発送元・お届け先住所変更
     .field
