--- a/app/views/credits/new.html.haml
+++ b/app/views/credits/new.html.haml
@@ -7,7 +7,10 @@
       カード番号
       %span.chapter-inner__creditcard-number__repuired
         必須
-      %input.chapter-inner__creditcard-number__box{placeholder: "半角数字のみ", type: "text"}
+      .chapter-inner__creditcard-number__box
+      = form_tag(pay_credts_path, method: :post, id: 'charge-form',  name: "inputForm") do
+        = text_field_tag "number", "", class: "number", placeholder: "半角数字のみ" ,maxlength: "16", type: "text", id: "credits_number"
+      %br
     .chapter-inner__creditcard-number__images
       = image_tag 'credit-image/visa.svg', class: 'creditcard-pic1' ,size: '32x20'
       = image_tag 'credit-image/master-card.svg', class: 'creditcard-pic2' ,size: '32x20'
@@ -20,19 +23,45 @@
       有効期限
       %span.chapter-inner__expiration-date__required
         必須
-      %input.chapter-inner__expiration-date__box{placeholder: "01", type: "text"} 月
-      %input.chapter-inner__expiration-date__box{placeholder: "20", type: "text"} 年
+    %select.chapter-inner__expiration-date__box#exp_month{name: "exp_month", type: "text"}
+      %option{value: ""} --
+      %option{value: "1"}01
+      %option{value: "2"}02
+      %option{value: "3"}03
+      %option{value: "4"}04
+      %option{value: "5"}05
+      %option{value: "6"}06
+      %option{value: "7"}07
+      %option{value: "8"}08
+      %option{value: "9"}09
+      %option{value: "10"}10
+      %option{value: "11"}11
+      %option{value: "12"}12
+    %span 月/
+    %select.chapter-inner__expiration-date__box#exp_year{name: "exp_year", type: "text"}
+      %option{value: ""} --
+      %option{value: "2020"}20
+      %option{value: "2021"}21
+      %option{value: "2022"}22
+      %option{value: "2023"}23
+      %option{value: "2024"}24
+      %option{value: "2025"}25
+      %option{value: "2026"}26
+      %option{value: "2027"}27
+      %option{value: "2028"}28
+      %option{value: "2029"}29
+      %option{value: "2030"}30
+    %span 年
+    %br
     %label.chapter-inner__security-card
       セキュリティーコード
       %span.chapter-inner__security-card__repuired
-        必須  
-      %input.chapter-inner__security-card__box{placeholder: "カード背面４桁もしくは３桁の番号", type: "text"}
+        必須
+      %input.chapter-inner__security-card__box
+    = text_field_tag "cvc", "", class: "cvc", placeholder: "カード背面3~4桁の番号", maxlength: "4", id: "cvc" 
+    #card_token
+    = submit_tag "追加する", id: "token_submit"
     //.chapter-inner__enter-btn
     //=link_to "追加する", class: "credit-add-btn" 
     //.chapter-inner__pay-method
     //  = link_to "支払い方法について ＞" class: "pay-method"
-    
-
--# = render 'credit'
--# = render 'plan'
-
