--- a/app/assets/stylesheets/modules/mypages/_userspage.scss
+++ b/app/assets/stylesheets/modules/mypages/_userspage.scss
@@ -15,10 +15,9 @@ li.mypage-item-not-found{
   color: #ccc;
 }
 body{
-  background-color: #f8f8f8;
-  a{text-decoration: none;
-  }
-
+  // background-color: #f8f8f8;
+  // a{text-decoration: none;
+  // }
   main{
     .mypage-container{
       margin: 0 auto;
