--- a/app/assets/stylesheets/modules/users/_registrations.scss
+++ b/app/assets/stylesheets/modules/users/_registrations.scss
@@ -18,13 +18,13 @@ html {
   a {
     list-style: none;
     display: inline-block;
-    height: 50px;
-    width: 120px;
-    margin-top: 34px;
+    height: 49px;
+    width: 185px;
+    margin: 40px 20px 0px 0px;
   }
   img {
-    height: 50px;
-    width: 120px;
+    height: 49px;
+    width: 185px;
     background-color: #f8f8f8;
   }
 }
@@ -34,6 +34,7 @@ html {
   background-color: #f8f8f8;
   display: flex;
   justify-content: center;
+  font-size: 14px;
   &__login-panel {
     width: 456px;
     &__registration {
@@ -42,7 +43,6 @@ html {
       background-color: #fff;
       border-bottom: 1px solid lightgray;
       p {
-        font-size: 14px;
         background-color: #fff;
       }
       a {
@@ -59,25 +59,28 @@ html {
     &__signin {
       text-align: center;
       background-color: #fff;
-      padding-top: 24px;
+      padding: 24px 64px 32px;
       &__group {
         width: 328px;
         height: 48px;
-        margin: 0 auto 24px auto;
+        margin-bottom: 24px;
         padding: 10px 16px 8px 16px;
       }
       input {
         display: block;
         background-color: #fff;
       }
+      .input-text {
+        font-size: 16px;
+      }
       a {
         display: block;
         text-decoration: none;
         text-align: left;
         padding: 0;
-        font-size: 14px;
         color: #0099e8;
         background-color: #fff;
+        margin-top: 40px;
       }
     }
   }
@@ -107,12 +110,10 @@ html {
           background-color: #fff;
           margin-top: 32px;
           label {
-            font-size: 14px;
             font-weight: 600;
           }
           p {
             display: inline;
-            font-size: 14px;
             font-weight: 600;
           }
           .form-require {
@@ -152,7 +153,6 @@ html {
           }
           .error_message{
             color:red;
-            font-size: 14px;
             margin: 8px 0 0;
           }
         }
@@ -161,29 +161,23 @@ html {
         }
         &__btn {
           background-color: #fff;
+          width: 100%;
           p {
             background-color: #fff;
-            margin-top: 24px;
-            font-size: 14px;
+            margin: 24px 0px;
             a {
               text-decoration: none;
               color: #0099E8;
             }
-          }
-          button {
-            margin-top: 24px;
-            width: 100%;
           }
         }
       }
     }
   }
   .submit-btn {
-    margin-top: 24px;
     height: 48px;
     background-color: #3CCACE;
     cursor: pointer;
-    font-size: 14px;
     color: #fff;
   }
 }
@@ -204,8 +198,8 @@ html {
     color: #333333;
   }
   img {
-    height: 50px;
-    width: 120px;
+    height: 22px;
+    width: 75px;
     background-color: #3CCACE;
     margin-top: 40px;
   }
