--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -18,11 +18,11 @@
       .navigation__right
         -if user_signed_in?
           %li.navigation__right--login
-            = link_to "ログアウト", destroy_user_session_path, method: :delete
+            = link_to "ログアウト", users_sign_out_path, method: :delete
           %li.navigation__right--new
-            = link_to "マイページ", "#"
+            = link_to "マイページ", user_path(current_user.id), method: :get
         -else
           %li.navigation__right--login
             = link_to "ログイン", new_user_session_path
           %li.navigation__right--new
-            = link_to "新規会員登録", new_user_registration_path 
+            = link_to "新規会員登録", new_user_registration_path
