--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -4,11 +4,6 @@
     .container__signup-panel__header
       %h2 会員情報入力
     = form_for(@user, url: registration_path(resource_name), html: {class: "container__signup-panel__main"}) do |f|
-      
-      // エラーメッセージ全てをリスト表示
-      -# %ul.error-messages
-      -# - @user.errors.full_messages.each do |message|
-      -#   %li.error-message= message
 
       .container__signup-panel__main__form
         .container__signup-panel__main__form__item
@@ -85,6 +80,6 @@
 
         .container__signup-panel__main__form__btn
           %p 「会員登録」のボタンを押すことにより<a href="#">利用規約</a>に同意したものとみなします
-          = button_tag "会員登録", type: "submit", class: "container__signup-panel__main__form__btn submit-btn"
+          = f.submit "会員登録", class: "container__signup-panel__main__form__btn submit-btn"
 
 = render partial: 'layouts/signin_registration_footer.html'
