--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,7 +2,8 @@
   .header__inner
     .mainheader
       %h1.mainheader__icon
-        = image_tag 'logo.png', class: 'header_log',size: '140x44'
+        = link_to root_path do
+          = image_tag 'logo.png', class: 'header_log', size: '140x44'
       .mainheader__search
         %input.mainheader__search--box{ placeholder: 'キーワードを検索してください'}
 
