--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -58,7 +58,7 @@
                 = link_to '#', class:"gotoAllList-inne" do
                   一覧を見る
       -# サイドバー
-      = render "layouts/sideber"
+      = render "layouts/sidebar"
 
   -# バナー
   = render "top/banner"
