--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %title FreemarketSample63c
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all'
-    -# = javascript_include_tag 'application'
+    = javascript_include_tag 'application'
 
   %body
     = yield
