--- a/app/assets/stylesheets/credits.scss
+++ b/app/assets/stylesheets/credits.scss
@@ -1,3 +1,138 @@
-// Place all the styles related to the credits controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.chapter-container {
+  margin: 40px 120px 0 120px;
+  background-color: #f5f5f5;
+
+
+  .chapter-head {
+    font-size: 24px;
+    padding: 8px 24px;
+    background-color: #f5f5f5;
+    position: relative;
+    max-width: 343px;
+    margin: auto;
+  }
+  .chapter-inner {
+    height: 500px;
+    max-width: 400px;
+    border-top: 3px solid #fff;
+    padding: 24px 50px 50px 50px;
+    margin: auto;
+    
+    &__creditcard-number {
+      &__text {
+        margin: 8px 0 0;
+        display: inline-block;
+        align-items: center;
+        font-weight: 600;
+        font-size: 15px;
+      }
+      &__required {
+        background-color: red;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+      }
+      
+      &__images {
+        margin: 8px 2px 0 0;
+      }
+    }
+
+    &__expiration-date {
+      &__text {
+      margin: 8px 0 0;
+      display: inline-block;
+      align-items: center;
+      font-weight: 600;
+      font-size: 15px;
+      }
+      &__required {
+        background-color: red;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+      }
+      &__box {
+        height: 48px;
+        padding: 10px 16px 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background-color: #fff;
+        line-height: 1.5;
+        font-size: 14px;
+        width: 40%;
+      }
+    }
+
+    &__security-card {
+      &__text {
+      margin: 8px 0 0;
+      display: inline-block;
+      align-items: center;
+      font-weight: 600;
+      font-size: 15px;
+      }
+      &__required {
+        background-color: red;
+        margin: 0 0 0 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        color: #fff;
+        font-size: 12px;
+      }
+      // &__box {
+      //   height: 48px;
+      //   padding: 10px 16px 8px;
+      //   border-radius: 4px;
+      //   border: 1px solid #ccc;
+      //   background-color: #fff;
+      //   line-height: 1.5;
+      //   font-size: 14px;
+      //   width: 100%;
+      // }
+    }
+
+    &__enter-btn {
+      submit_tag {
+      background-color: #ea352d;
+      border: 1px solid #ea352d;
+      
+      margin: 0 0 0 8px;
+      padding: 2px 4px;
+      border-radius: 2px;
+      font-size: 12px;
+      }
+    }
+  }
+}
+
+
+// label {
+//   display: inline-block;
+//   align-items: center;
+//   font-weight: 600;
+//   font-size: 15px;
+//   margin-bottom: 5px;
+// }
+// span {
+//   background-color: red;
+//   margin: 0 0 0 8px;
+//   padding: 2px 4px;
+//   border-radius: 2px;
+//   color: #fff;
+//   font-size: 12px;
+// }
+// input {
+//   height: 48px;
+//   padding: 10px 16px 8px;
+//   border-radius: 4px;
+//   border: 1px solid #ccc;
+//   background-color: #fff;
+//   line-height: 1.5;
+//   font-size: 14px;
+//   //width: 100%;
+// }
