--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -50,10 +50,9 @@
               カテゴリー
               .products-contents__main-details__category__title-required
                 必須
-            = f.collection_select :category_id, @parents, :id, :category_name,{prompt: "---"}, class: "products-contents__main-details__category-box", id: "parent-form", name: 'product[category_ids][]'
-            = f.collection_select :category_id, @parents, :id, :category_name,{prompt: "---"}, class: "products-contents__main-details__category-box", id: "parent-form", name: 'product[category_ids][]'
-            = f.collection_select :category_id, @parents, :id, :category_name,{prompt: "---"}, class: "products-contents__main-details__category-box", id: "parent-form", name: 'product[category_ids][]'
-            = f.collection_select :category_id, @parents, :id, :category_name,{prompt: "---"}, class: "products-contents__main-details__category-box", id: "parent-form", name: 'product[category_ids][]'
+            .products-contents__main-details__category-wrapper
+              .products-contents__main-details__category-wrapper__box
+                = f.select :category_id, @parents, {}, {class: "products-contents__main-details__category-box", id: "parent-form"}
           .products-contents__main-details__brand
             .products-contents__main-details__brand__title
               ブランド
