--- a/app/assets/stylesheets/modules/products/_exhibition.scss
+++ b/app/assets/stylesheets/modules/products/_exhibition.scss
@@ -3,7 +3,7 @@
   &__btn{
     width: 120px;
     height: 116px;
-    background: $main_blue;
+    background: $main_color;
     text-align: center;
     border-radius: 4%;
     bottom: 32px;
