--- a/app/assets/stylesheets/credits.scss
+++ b/app/assets/stylesheets/credits.scss
@@ -84,55 +84,25 @@
         color: #fff;
         font-size: 12px;
       }
-      // &__box {
-      //   height: 48px;
-      //   padding: 10px 16px 8px;
-      //   border-radius: 4px;
-      //   border: 1px solid #ccc;
-      //   background-color: #fff;
-      //   line-height: 1.5;
-      //   font-size: 14px;
-      //   width: 100%;
-      // }
     }
+    .botton {
+      width: 100%;
+    
+    }
+    .input {
+      width: 100%;
+      background-color: #ea352d;
+    }
+    .token_submit {
 
-    &__enter-btn {
-      submit_tag {
       background-color: #ea352d;
       border: 1px solid #ea352d;
-      
+      width: 100%;
       margin: 0 0 0 8px;
       padding: 2px 4px;
       border-radius: 2px;
       font-size: 12px;
-      }
+      
     }
   }
 }
-
-
-// label {
-//   display: inline-block;
-//   align-items: center;
-//   font-weight: 600;
-//   font-size: 15px;
-//   margin-bottom: 5px;
-// }
-// span {
-//   background-color: red;
-//   margin: 0 0 0 8px;
-//   padding: 2px 4px;
-//   border-radius: 2px;
-//   color: #fff;
-//   font-size: 12px;
-// }
-// input {
-//   height: 48px;
-//   padding: 10px 16px 8px;
-//   border-radius: 4px;
-//   border: 1px solid #ccc;
-//   background-color: #fff;
-//   line-height: 1.5;
-//   font-size: 14px;
-//   //width: 100%;
-// }
