--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -15,10 +15,10 @@
       = render "layouts/sideber"
 
   -# バナー
-  = render "top/banner"
+  = render "products/banner"
 
   -# エキシビジョン
-  = render "top/exhibition"
+  = render "products/exhibition"
 
   -# フッター
   = render "layouts/footer"
