--- a/app/assets/stylesheets/modules/products/_banner.scss
+++ b/app/assets/stylesheets/modules/products/_banner.scss
@@ -5,17 +5,16 @@
   background-size: cover;
   background-position: center;
   &__inner {
+    color: white;
     text-align: center;
+    text-shadow: 0 0 5px rgba($color: #000000, $alpha: 1.0);
     &--title {
       font-size: 24px;
       font-weight: bold;
       line-height: 1.4;
-      color: green;
     }
     &--text {
       font-size: 35px;
-      text-shadow: 0 0 5px rgba($color: #000000, $alpha: 1.0);
-      color: yellow;
     }
     &__icons {
       width: 100%;
