--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,14 +9,15 @@
           = link_to "" do
             %figure
               = image_tag "member_photo_noimage_thumb.png", "alt width":"60", height:"60"
-            %h2.bold 田中将吾郎
+            %h2.bold
+              = @user.nickname
             .mypage-number
               .mypage-number-detail
                 評価
-                %span.bold 56
+                %span.bold 0
               .mypage-number-detail
                 出品数
-                %span.bold 56
+                %span.bold 0
         %section.mypage-container-news-todo.clearfix
         
         %section.mypage-container__tradings
@@ -61,10 +62,10 @@
       = render "layouts/sidebar"
 
   -# バナー
-  = render "top/banner"
+  = render "products/banner"
 
   -# エキシビジョン
-  = render "top/exhibition"
+  = render "products/exhibition"
 
   -# フッター
   = render "layouts/footer"
