マイページのview修正
ユーザーのnickname表示など

--- a/app/assets/stylesheets/base/_reset.scss
+++ b/app/assets/stylesheets/base/_reset.scss
@@ -126,5 +126,6 @@ legend {
 #yui3-css-stamp.cssreset { display: none; }
 
 body {
+  background-color: #FFF;
   font-family: "Source Sans Pro", Helvetica, Arial, "游ゴシック体", "YuGothic", "メイリオ", "Meiryo", sans-serif;
 }
