--- a/app/views/products/_main.html.haml
+++ b/app/views/products/_main.html.haml
@@ -100,7 +100,7 @@
           お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
   
   .pickupcontainer
-    .header
+    .head
       ピックアップカテゴリー
     .subtitle
       = link_to "新規投稿商品", '#'
@@ -122,7 +122,7 @@
               (税込)
   
   .pickupcontainer
-    .header
+    .head
       ピックピックアップブランド
     .subtitle
       = link_to "アーカイブ", '#'
