--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -1,11 +1,12 @@
 .header {
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
   padding: 0 60px;
   &__inner {
     max-width: 1040px;
     min-height: 82px;
     margin: 0 auto;
     padding: 15px 0 0;
-    background-color: #fff;
     
     .mainheader {
       position: relative;
