--- a/app/assets/stylesheets/modules/products/_main.scss
+++ b/app/assets/stylesheets/modules/products/_main.scss
@@ -184,7 +184,7 @@
     padding: 40px 0;
     background-color: #f8f8f8;
     height: 100%;
-    .header{
+    .head{
       text-align: center;
       font-size: 28px;
       line-height: 1.4;
