--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,5 +10,6 @@
 @import "modules/credits";
 @import "modules/products";
 @import "modules/addresses";
+// font
 @import "font-awesome-sprockets";
 @import "font-awesome";
